# pipeline-etl-serverless-sre

./: .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  pyproject.toml
infra/: backend.tf  main.tf  providers.tf  variables.tf
infra/modules/: cloudwatch.tf  iam.tf  lambda.tf  notifications.tf  s3.tf
