[project]
name = "etl-serverless-sre"
version = "0.1.0"
description = "Pipeline de Engenharia de Dados Serverless (AWS) focado em resiliência e automação total via IaC. Assegura a continuidade do negócio através de processamento escalável, custo reduzido e alta observabilidade."
authors = [
    {name = "Felipe dos Anjos",email = "dosanjosfelipe06@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pandera[pandas] (>=0.32.0,<0.33.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.18,<0.16.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pyright (>=1.1.410,<2.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pip-audit (>=2.10.1,<3.0.0)",
]
